      file, exits with an error, and lintian aborts.  Reported by Bill
      Allombert.  (Closes: #399392)
  * collection/objdump-info:
    + [RA] Include unrecognized format errors from objdump in the output
      rather than aborting; some packages contain apparently corrupt ELF
      binaries.

  * debian/control:
    + [RA] Depend on gettext 0.16 or later for --use-untranslated.

  * unpack/list-udebpkg:
    + [RA] Handle compressed udeb Packages files.  Thanks, Bill
      Allombert.  (Closes: #400338)

 -- Russ Allbery <rra@debian.org>  Sun,  3 Dec 2006 10:52:39 -0800

lintian (1.23.26) unstable; urgency=low

  * checks/binaries{.desc,}:
    + [RA] Add a policy reference for unstripped-binary-or-object.
      Thanks, Bas Wijnen.  (Closes: #394419)
    + [RA] Add a special exception to the shared library dependency check
      for the dynamic loader itself.
  * checks/changelog-file.desc:
    + [RA] Downgrade to a warning several errors with changelog files,
      including compression and a text version of HTML changelogs, that
      are only shoulds in Policy.  (Closes: #289723)
    + [RA] Cleaned up language and use of unbalanced single quotes in
      numerous descriptions.
  * checks/control-file{.desc,}:
    + [RA] Diagnose a control file that creates binary packages in a
      different archive category from the source package or the other
      binary packages.  Idea from Yann Dirson.  (Closes: #394720)
    + [RA] Close opened files.
    + [RA] Add info-level check for Section in the source section of the
      control file.  (Closes: #322244)
  * checks/cruft{.desc,}:
    + [RA] Tighten the timestamp check on config.{sub,guess} to look for
      files dated 2004 or newer, since that's when x86_64 was added.
      Increase to an error at the request of Ryan Murray since we already
      suppress this warning of config.{guess,sub} are modified by the
      Debian patch or if the package build-depends on autotools-dev.
      (Closes: #190897)